--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    background: linear-gradient(to left, #fffcec 0%, #fffcec 80%, #d3d3d3 100%);
+}
 .navegacion {
     background-color: #230b42;
     padding: 10px;
